# Licenta

./: .gitignore  README.md
Documents/: .~lock.IstoriaRetelelorNeuronale.odt#  Clasificare.odt
Exemple/: gradient_descent_1.py  gradient_descent_2.py
Exemple/backpropagation/: dataset.py  mnist.py  nn.py
Models/: .gitignore  automatic _training.py  automatic _training_leucemia.py  automatic_training.py  delete_files.py
Models/medici/: brain_tumor_part_II.py  braintumor_seg.py  braintumor_seg_2d.py  ckd.py  diabet.py  fake_segmentation.py  heart_attack_risk.py  leucemia_seg.py  leucemie.py  leucemie2.py  leucemie_gen.py  temp.py
Models/pacienti/: .gitignore  prescription.py  prescription2.py
Models/utils/: __init__.py  callbacks.py  custom_layers.py  image.py  logger.py  loss_functions.py  outlier.py  resnet.py  system_monitor.py  taskpy  unet.py
desktop-app/: install.sh  run.sh
desktop-app/client/: app.py  imgui.ini  logger.py  main.py  model.keras  mri-analyzer.desktop  mri_analyzer.py  reader.py  (+1 more)
desktop-app/mri-viewer/: CMakeLists.txt  main.cpp  program.cpp
desktop-app/mri-viewer/controls/: controls.cpp  controls.h
desktop-app/mri-viewer/shaders/brain/: fragment.glsl  vertex.glsl
desktop-app/mri-viewer/shaders/slice/: fragment.glsl  vertex.glsl
desktop-app/mri-viewer/slicer/: slicer.cpp  slicer.h
desktop-app/mri-viewer/tools/: tools.cpp  tools.h
models/: anemia.py  better_reader.py  brain_tumors_class.py  braintumor_class_weights.py  braintumor_part_I.py  heart_attack_risk.py  leucemie2.py  leucemie_final.py  overlay.py  unet_old.txt
(+84 files in other folders)
